--- a/css/apuntesdaw.css
+++ b/css/apuntesdaw.css
@@ -8,6 +8,8 @@
 }
 
 :root {
+  --fondoGris: #212121;
+  --tipografiaClara: #E5E7E9;
   --morado: #6c3483;
   --rojo: #e74c3c;
   --violeta: #8e44ad;
@@ -24,8 +26,8 @@ body {
   display: flex;
   flex-flow: column nowrap;
   font-size: 1.5rem;
-  background-color: white;
-  color: black;
+  background-color: var(--fondoGris);
+  color: var(--tipografiaClara);
 }
 .principal {
   background-color: var(--morado);
@@ -39,24 +41,43 @@ body {
 header {
   display: flex;
   flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   min-height: 200px;
-  margin: 1rem auto 2rem;
-  text-align: center;
+  font-family: 'Titan One', cursive;
+  font-weight: 100;
+  border: 2px dashed red;
 }
+    .navtop {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      width: 100%;
+      margin: 0 auto;
+      padding: .8rem;
+      background-color: var(--aguamar);
+    }
 
-header h1 {
-  font-size: 4rem;
-  margin: 1rem auto;
-}
+    .menuPrincipalAsignatura {
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: center;
+      padding: .5rem 1rem; 
+    }
+        .menuPrincipalAsignatura a {
+          padding: .5rem 1rem;
+          
+        } 
+            .menuPrincipalAsignatura a:hover {
+              background-color: var(--aguamar);
+            }
 
-.contenedorMenuAsignaturas {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  gap: 1rem;
-  margin-bottom: 2rem;
-}
+    .tituloTema {
+      font-size: 1.8rem;
+      align-self: center;
+      padding: 2rem;
+    }
 
 .asignaturas {
   min-height: 100px;
@@ -79,14 +100,6 @@ header h1 {
   border: 5px solid #ff6f00; 
 }
 
-.menuPrincipalAsignatura {
-  margin: 1rem auto;
-  padding: .5rem 1rem; 
-  text-align: start;
-}
-.menuPrincipalAsignatura a {
-  padding: .5rem 1rem;
-}
 /* ----------------------------- */
 /* SECTIONS */
 section {
@@ -98,6 +111,8 @@ section {
 .indice {
   width: 70%;
   margin: 1rem auto;
+  font-family: 'Titan One', cursive;
+  font-weight: 100;
 }
 /* ----------------------------- */
 /* ARTICLES */
@@ -109,13 +124,12 @@ article {
 .btnArriba {
   display: inline-block;
   margin: 1rem 0;
-  padding: .5rem 1.5rem;
-  border: 5px solid black;
-  border-radius: 10px;
+  padding: .3rem 1.5rem;
+  border: 3px solid var(--aguamar);
 }
 
 .btnArriba:hover {
-  border-color: var(--rojo);
+  background-color: var(--aguamar);
 }
 
 /* ----------------------------- */
@@ -134,7 +148,7 @@ h5, h6 {margin-bottom: .5rem;}
   margin: 1rem auto 3rem;
   font-size: 2rem;
   text-align: center;
-  border-bottom: 5px solid black;
+  border-bottom: 5px solid var(--tipografiaClara);
 }
 
 p {
@@ -142,7 +156,7 @@ p {
   padding: 1rem auto;
 }
 
-a {color: black;}
+a {color: var(--tipografiaClara);}
 
 ul, ol {
   margin: 1rem 0 2rem;
@@ -158,15 +172,16 @@ table {
   caption {
     text-align: center;
     font-weight: bold;
-    border: 2px dashed rgba(0, 0, 0, 0.1);
+    background-color: rgba(52, 152, 219, .5); /******************************************************/
+    border: 2px dashed var(--aguamar);
     border-bottom: none;
   }
   tr {
-    border: 2px dashed rgba(0, 0, 0, 0.1);
+    border: 2px dashed var(--aguamar);
   }
   th, td {
     padding: .5rem 1.5rem;
-    border: 2px dashed rgba(0, 0, 0, 0.1);
+    border: 2px dashed var(--aguamar);
     
   }
 
