--- a/css/apuntesdaw.css
+++ b/css/apuntesdaw.css
@@ -28,14 +28,14 @@ body {
   font-size: 1.5rem;
   background-color: var(--fondoGris);
   color: var(--tipografiaClara);
-}
+}/*
 .principal {
   background-color: var(--morado);
   color: white;
 }
 .principal a {
   color: white;
-}
+}*/
 /* ----------------------------- */
 /* CABECERAS Y MENÚS */
 header {
@@ -47,7 +47,6 @@ header {
   min-height: 200px;
   font-family: 'Titan One', cursive;
   font-weight: 100;
-  border: 2px dashed red;
 }
     .navtop {
       display: flex;
@@ -78,7 +77,7 @@ header {
       align-self: center;
       padding: 2rem;
     }
-
+/*
 .asignaturas {
   min-height: 100px;
   max-width: 320px;
@@ -99,7 +98,7 @@ header {
 .asignaturas:hover {
   border: 5px solid #ff6f00; 
 }
-
+*/
 /* ----------------------------- */
 /* SECTIONS */
 section {
@@ -111,9 +110,16 @@ section {
 .indice {
   width: 70%;
   margin: 1rem auto;
-  font-family: 'Titan One', cursive;
-  font-weight: 100;
 }
+
+    .indice li { 
+      margin-left: 2rem;
+      padding: .5rem;
+      
+    }
+    .indice li:hover {
+      background-image: linear-gradient(to right, rgb(52, 152, 219) 20%,  rgb(33, 33, 33) 80%); 
+    }
 /* ----------------------------- */
 /* ARTICLES */
 article {
@@ -163,6 +169,8 @@ ul, ol {
   list-style-position: inside;
 }
 
+ul { list-style-type: square;}
+
 li {margin: .5rem 0;}
 
 table {
@@ -172,7 +180,7 @@ table {
   caption {
     text-align: center;
     font-weight: bold;
-    background-color: rgba(52, 152, 219, .5); /******************************************************/
+    background-color: rgba(52, 152, 219, .5); 
     border: 2px dashed var(--aguamar);
     border-bottom: none;
   }
