--- a/css/general.css
+++ b/css/general.css
@@ -22,7 +22,7 @@ body {
   grid-template-columns: repeat(6, 1fr);
   grid-auto-rows: min-content;
   grid-gap: 15px;
-  background-color: yellow; /*var(--azulPrincipal)*/
+  background-color: var(--azulPrincipal); 
   color: var(--blancoTipologia);
   font-family: 'Montserrat', sans-serif;
   font-size: large;
