--- a/css/apuntesdaw.css
+++ b/css/apuntesdaw.css
@@ -95,8 +95,8 @@ section {
     .indice li { 
       margin-left: 2rem;
       padding: .5rem;
-      
     }
+
     .indice li:hover {
       background-image: linear-gradient(to right, rgb(52, 152, 219) 20%,  rgb(33, 33, 33) 80%); 
     }
@@ -178,8 +178,53 @@ table {
     width: 393px;
     font-size: 1rem;
   }
+
+  #apuntes { display: none;}
+
   .menuPrincipalAsignatura {
     flex-flow: column nowrap;
+    padding: .2rem 0;
   } 
+
+  .menuPrincipalAsignatura a { padding: .2rem .2rem;}
+
+  .tituloTema {
+    font-size: 1.2rem;
+    padding: .8rem 0;
+  }
+
+  .apartado { margin-top: 1rem;}
+
+  section { padding: 1.5rem;}
+
+  .indice {
+    width: 100%;
+    margin: .5rem auto;
+  }
+  
+    .indice li { padding: .5rem 0;}
+
+  article {
+    margin: .5rem 0;
+    padding: .5rem 0;
+  }
+
+  .btnArriba {
+    margin: .5rem 0;
+    padding: .2rem 1rem;
+  }
+
+  p {
+    margin-bottom: .5rem;
+    padding: .5rem auto;
+  }
+
+  ul, ol { margin: 1rem 0;}
+
+  table {
+    margin: 1rem auto;
+  }
+
+  th, td { padding: .3rem 1rem;}
 
 }
