--- a/css/apuntesdaw.css
+++ b/css/apuntesdaw.css
@@ -99,8 +99,8 @@ section {
       background-color: rgba(33, 33, 33, .1);
     }
     .indice li:active {
-      border: 1px solid aqua;
-      background-color: rgba(0, 255, 255, .3);
+      border: 1px solid rgb(52, 152, 219);
+      background-color: rgba(52, 152, 219, .3);
     }
 
 /* ----------------------------- */
