--- a/css/apuntesdaw.css
+++ b/css/apuntesdaw.css
@@ -244,7 +244,7 @@ table {
   .contenedor {width: 100%;}
   section { 
     width: 100%; 
-    padding: 1.5rem;
+    padding: 1rem .5rem;
   }
   .indice {
     width: 100%;
