--- a/css/apuntesdaw.css
+++ b/css/apuntesdaw.css
@@ -248,7 +248,7 @@ table {
   }
   .indice {
     width: 100%;
-    font-size: 1rem;
+    font-size: .8rem;
     margin: .5rem auto;
     padding: 0 .2rem;
   }
