--- a/css/apuntesdaw.css
+++ b/css/apuntesdaw.css
@@ -111,7 +111,7 @@ article {
 }
 
 .btnArriba {
-  /*width: max-content;*/
+  width: 50px;
   margin: 1rem 0;
   padding: .3rem 1.5rem;
   border: 3px solid var(--aguamar);
