--- a/css/apuntesdaw.css
+++ b/css/apuntesdaw.css
@@ -115,6 +115,7 @@ article {
   margin: 1rem 0;
   padding: .3rem 1.5rem;
   border: 3px solid var(--aguamar);
+  text-align: center;
 }
 
 .btnArriba:hover {
