--- a/css/apuntesdaw.css
+++ b/css/apuntesdaw.css
@@ -114,12 +114,16 @@ article {
   width: 120px;
   margin: 1rem 0;
   padding: .3rem 1.5rem;
-  border: 3px solid var(--aguamar);
+  border: 3px solid rgba(52, 152, 219, .5 );
   text-align: center;
 }
 
 .btnArriba:hover {
-  background-color: var(--aguamar);
+  background-color: rgba(33, 33, 33, .1);
+}
+.btnArriba:active {
+  border: 3px solid rgb(52, 152, 219);
+  background-color: rgba(52, 152, 219, .3);
 }
 
 /* ----------------------------- */
