--- a/css/apuntesdaw.css
+++ b/css/apuntesdaw.css
@@ -67,6 +67,7 @@ header {
       font-size: 1.8rem;
       align-self: center;
       padding: 2rem;
+      text-align: center;
     }
 
 /* ----------------------------- */
