--- a/css/general.css
+++ b/css/general.css
@@ -1,3 +1,6 @@
+/*************************************************************************************/
+/* RESET                                                                             */
+/*************************************************************************************/
 * {
   margin: 0;
   padding: 0;
@@ -5,7 +8,9 @@
   text-decoration: none;
   box-sizing: border-box;
 }
-
+/*************************************************************************************/
+/* SEMANTICAS                                                                        */
+/*************************************************************************************/
 :root {
   --azulPrincipal: rgb(1, 87, 155);
   --blancoTipologia: #FDFEFE;
@@ -16,7 +21,7 @@
   font-family: 'Titan One', cursive;
 */
 }
-/*    General    */
+
 body {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
@@ -28,13 +33,6 @@ body {
   font-size: large;
 }
 
-.tituloSeccion {
-  grid-column: 2 /span 4;
-  margin: 1rem 0;
-  font-family: 'Titan One', cursive;
-  font-weight: 100;
-}
-
 h1 { font-size: 3rem;}
 h2 { font-size: 2.5rem;}
 h3 { font-size: 2rem;}
@@ -43,19 +41,18 @@ a {
   color: var(--blancoTipologia);
 }
 
-/**********************/
-/*    Presentacion    */
-.presentacion {
-  grid-column: 1 / span 6;
-  margin-top: 2rem;
-  margin-bottom: 100px;
-  font-family: 'Smooch', cursive;
-  font-size: 8rem;
-  text-align: center;
+/*************************************************************************************/
+/* CLASES                                                                            */
+/*************************************************************************************/
+/*       Titulos       *//* Son los titulos de la tres secciones daw, proyectos y devAcademy*/
+.tituloSeccion {
+  grid-column: 2 /span 4;
+  margin: 1rem 0;
+  font-family: 'Titan One', cursive;
+  font-weight: 100;
 }
 
-/**********************/
-/*        Card        */
+/*        Card        *//* Prototipo de tarjeta */
 .card {
   display: flex;
   flex-flow: column wrap;
@@ -75,62 +72,66 @@ a {
     background-color: rgba(255, 255, 255, 0.1);
   }
 
-/**********************/
-/*        Daw         */
-  .asignaturaUno {
-    grid-column: 2 /span 1;
-    grid-row: 3;
-  }
-  .asignaturaDos {
-    grid-column: 3 /span 1;
-    grid-row: 3;
-  }
-  .asignaturaTres {
-    grid-column: 4 /span 1;
-    grid-row: 3;
-  }
-  .asignaturaCuatro {
-    grid-column: 5 /span 1;
-    grid-row: 3;
-  }
-  .asignaturaCinco {
-    grid-column: 2 /span 1;
-    grid-row: 4;
-  }
-  .asignaturaSeis {
-    grid-column: 3 /span 1;
-    grid-row: 4;
-  }
-  .asignaturaSiete {
-    grid-column: 4 /span 1;
-    grid-row: 4;
-  }
-  .asignaturaOcho {
-    grid-column: 5 /span 1;
-    grid-row: 4;
-  }
-  .asignaturaNueve {
-    grid-column: 2 /span 1;
-    grid-row: 5;
-  }
-  .asignaturaDiez {
-    grid-column: 3 /span 1;
-    grid-row: 5;
-  }
-  .asignaturaOnce {
-    grid-column: 4 /span 1;
-    grid-row: 5;
-  }
-  .asignaturaDoce {
-    grid-column: 5 /span 1;
-    grid-row: 5;
-  }
-  .asignaturaTrece {
-    grid-column: 2 /span 1;
-    grid-row: 6;
-  }
-/**********************/
-/*       Apuntes      */
+  /*    Presentacion    *//* Titulo principal SapheryDesings */
+.presentacion {
+  grid-column: 1 / span 6;
+  margin-top: 2rem;
+  margin-bottom: 100px;
+  font-family: 'Smooch', cursive;
+  font-size: 8rem;
+  text-align: center;
+}
 
-/**********************/
-/*      Proyectos     */
+/*        Daw         *//* Grid individuales de cada una de las tarjetas*/
+.asignaturaUno {
+  grid-column: 2 /span 1;
+  grid-row: 3;
+}
+.asignaturaDos {
+  grid-column: 3 /span 1;
+  grid-row: 3;
+}
+.asignaturaTres {
+  grid-column: 4 /span 1;
+  grid-row: 3;
+}
+.asignaturaCuatro {
+  grid-column: 5 /span 1;
+  grid-row: 3;
+}
+.asignaturaCinco {
+  grid-column: 2 /span 1;
+  grid-row: 4;
+}
+.asignaturaSeis {
+  grid-column: 3 /span 1;
+  grid-row: 4;
+}
+.asignaturaSiete {
+  grid-column: 4 /span 1;
+  grid-row: 4;
+}
+.asignaturaOcho {
+  grid-column: 5 /span 1;
+  grid-row: 4;
+}
+.asignaturaNueve {
+  grid-column: 2 /span 1;
+  grid-row: 5;
+}
+.asignaturaDiez {
+  grid-column: 3 /span 1;
+  grid-row: 5;
+}
+.asignaturaOnce {
+  grid-column: 4 /span 1;
+  grid-row: 5;
+}
+.asignaturaDoce {
+  grid-column: 5 /span 1;
+  grid-row: 5;
+}
+.asignaturaTrece {
+  grid-column: 2 /span 1;
+  grid-row: 6;
+}
