--- a/css/general.css
+++ b/css/general.css
@@ -82,13 +82,12 @@ a {
   border: 1px dashed darkred;
 }
   .imgCard {
-    max-height: 50px;
     border: 1px dashed darkorange;
   }
     .imgCard img {
       object-fit: cover;
-      width: 100%;
-      height: 100%;
+      /*width: 100%;*/
+      max-height: 100px;
     } 
   .descripcionCard {
     min-height: 140px;
