--- a/css/general.css
+++ b/css/general.css
@@ -69,8 +69,8 @@ a {
 .daw {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-evenly;
-  gap: 10px;
+  justify-content: center;
+  gap: 20px;
   padding: 10px 0;
 }
 
@@ -78,7 +78,10 @@ a {
 .card {
   display: flex;
   flex-flow: column wrap;
-  width: 320px;
+  width: 300px;
+  height: 400px;
+  border: 2px dashed darkorange;
+  font-size: 1rem;
 }
   .imgCard {
     max-height: 150px;
@@ -91,7 +94,6 @@ a {
   .descripcionCard {
     min-height: 140px;
     padding: .5rem;
-    text-align: center;
     background-color: rgba(255, 255, 255, 0.1);
   }
 
