--- a/css/general.css
+++ b/css/general.css
@@ -80,23 +80,34 @@ a {
   flex-flow: column wrap;
   width: 300px;
   height: 400px;
-  border: 2px dashed darkorange;
+  border: 1px dashed darkorange;
   font-size: 1rem;
 }
-  .imgCard {
-    border: 1px dashed darkorange;
+  .tituloCard, .footerCard {
+    display: flex;
+    flex-direction: column wrap;
   }
-    .imgCard img {
-      object-fit: cover;
-      /*width: 100%;*/
-      max-height: 100px;
-    } 
+  .tituloCard {
+    min-height: 35px;
+    font-size: 1.2rem;
+    text-align: center;
+  }
+  .tituloCard strong {margin: auto;}
+  .card img {
+    min-height: 150px;
+    min-width: 100%;
+    background-color: rgba(255, 255, 255, .1);
+  }
   .descripcionCard {
-    min-height: 140px;
-    padding: .5rem;
-    background-color: rgba(255, 255, 255, 0.1);
-    border: 1px dashed whitesmoke;
+    /*height: 130px;*/
+    padding: .2rem;
   }
+  .footerCard {
+    height: 35px;
+    border: 1px dashed white;
+    align-self: flex-end;
+  }
+  .footerCard span { padding: .2rem;}
 
 @media screen and (min-width:768px) and (max-width: 1024px){
   .presentacion {font-size: 6rem;}
