--- a/css/general.css
+++ b/css/general.css
@@ -81,11 +81,12 @@ a {
   justify-content: space-between;
   width: 300px;
   height: 400px;
-  border: 1px dashed darkorange;
+  /*border: 1px dashed darkorange;*/
+  box-shadow: 0 0 5px 1px black;
   font-size: 1rem;
 } 
     .tituloCard, .footerCard {
-      line-height: normal;
+      /*line-height: normal;*/
       display: flex;
       flex-direction: column;
     }
@@ -106,9 +107,9 @@ a {
     }
     .footerCard {
       height: 35px;
-      border: 1px dashed white;
+      background-color: rgba(255, 255, 255, .1);
     }
-    .footerCard span { padding: .2rem;}
+    .footerCard span { margin: auto 0; padding: .2rem;}
 
 @media screen and (min-width:768px) and (max-width: 1024px){
   .presentacion {font-size: 6rem;}
