--- a/css/general.css
+++ b/css/general.css
@@ -75,6 +75,9 @@ a {
 }
 
 /*        Card        *//* Prototipo de tarjeta */
+.desactivada {
+  background-color: rgb(0, 0, 0, .5);
+}
 .card {
   display: flex;
   flex-flow: column;
@@ -82,7 +85,6 @@ a {
   width: 300px;
   height: 400px;
   /*border: 1px dashed darkorange;*/
-  box-shadow: 0 0 5px 1px black;
   font-size: 1rem;
 } 
     .tituloCard, .footerCard {
