--- a/css/general.css
+++ b/css/general.css
@@ -84,7 +84,7 @@ a {
   justify-content: space-between;
   width: 300px;
   height: 400px;
-  /*border: 1px dashed darkorange;*/
+  border: 1px dashed darkorange;
   font-size: 1rem;
 } 
     .tituloCard, .footerCard {
