--- a/css/general.css
+++ b/css/general.css
@@ -84,7 +84,8 @@ a {
   justify-content: space-between;
   width: 300px;
   height: 400px;
-  border: 1px dashed darkorange;
+  /*border: 1px dashed darkorange;*/
+  box-shadow: 0 0 2px 1px rgba(1, 87, 155, .8);
   font-size: 1rem;
 } 
     .tituloCard, .footerCard {
