--- a/css/general.css
+++ b/css/general.css
@@ -94,7 +94,7 @@ a {
       flex-direction: column;
     }
     .tituloCard {
-      min-height: 35px;
+      height: 35px;
       font-size: 1.2rem;
       text-align: center;
     }
