--- a/css/general.css
+++ b/css/general.css
@@ -84,7 +84,7 @@ a {
   justify-content: space-between;
   width: 300px;
   height: 400px;
-  /*border: 1px dashed darkorange;*/
+  border: 1px dashed darkorange;
   box-shadow: 0 0 5px 5px rgba(1, 87, 155, .5);
   font-size: 1rem;
 } 
