--- a/css/general.css
+++ b/css/general.css
@@ -93,11 +93,11 @@ a {
       flex-direction: column;
     }
     .tituloCard {
-      min-height: 35px;
+      height: 35px;
       font-size: 1.2rem;
       text-align: center;
     }
-    .tituloCard strong {margin: auto; line-height: 35px;}
+    .tituloCard strong {margin: auto; } /*line-height: 35px;*/
     .card img {
       min-height: 150px;
       min-width: 100%;
