--- a/css/general.css
+++ b/css/general.css
@@ -85,7 +85,7 @@ a {
   width: 300px;
   height: 400px;
   /*border: 1px dashed darkorange;*/
-  box-shadow: 5px 5px rgba(255, 255, 255, 0.9);
+  box-shadow: 0 0 5px 5px #fff;
   font-size: 1rem;
 } 
     .tituloCard, .footerCard {
