--- a/css/general.css
+++ b/css/general.css
@@ -77,7 +77,7 @@ a {
 /*        Card        *//* Prototipo de tarjeta */
 .desactivada {
   background-color: rgb(0, 0, 0, .5);
-  box-shadow: 0 0 5px 5px #fff;
+  box-shadow: 0 0 2px 1px rgba(1, 87, 155, .5);
 }
 .card {
   display: flex;
