--- a/css/general.css
+++ b/css/general.css
@@ -82,6 +82,7 @@ a {
   width: 300px;
   height: 400px;
   /*border: 1px dashed darkorange;*/
+  background-color: rgb(1, 87, 155);
   box-shadow: 0 0 2px 1px rgba(1, 87, 155, .5);
   font-size: 1rem;
 } 
