--- a/css/general.css
+++ b/css/general.css
@@ -75,7 +75,7 @@ a {
 }
 
 /*        Card        *//* Prototipo de tarjeta */
-.sombra {box-shadow: 0 0 2px 1px #01579b80;}
+.sombra {box-shadow: 2px 1px #01579b80;}
 .card {
   display: flex;
   flex-flow: column;
