--- a/css/general.css
+++ b/css/general.css
@@ -75,7 +75,7 @@ a {
 }
 
 /*        Card        *//* Prototipo de tarjeta */
-.sombra {box-shadow: 0 2px 1px #01579b80;}
+.sombra {box-shadow: 5px 2px;}
 .card {
   display: flex;
   flex-flow: column;
@@ -83,7 +83,6 @@ a {
   width: 300px;
   height: 400px;
   /*border: 1px dashed darkorange;*/
-  
   font-size: 1rem;
 } 
     .tituloCard, .footerCard {
