--- a/css/general.css
+++ b/css/general.css
@@ -75,7 +75,7 @@ a {
 }
 
 /*        Card        *//* Prototipo de tarjeta */
-.sombra {box-shadow: 0px 0px 5px 2px rgba(1, 87, 155, .8);}
+.sombra {box-shadow: 0px 5px 2px #01579bcc;}
 .card {
   display: flex;
   flex-flow: column;
