--- a/css/general.css
+++ b/css/general.css
@@ -75,7 +75,7 @@ a {
 }
 
 /*        Card        *//* Prototipo de tarjeta */
-.sombra {box-shadow: 0px 5px 2px black;}
+.sombra {box-shadow: 0px 0px 5px 2px black;}
 .card {
   display: flex;
   flex-flow: column;
