--- a/css/general.css
+++ b/css/general.css
@@ -96,7 +96,7 @@ a {
     }
     .tituloCard strong {margin: auto; }
     .card img {
-      min-height: 150px;
+      height: 150px;
       min-width: 100%;
       background-color: rgba(255, 255, 255, .1);
     }
