--- a/css/general.css
+++ b/css/general.css
@@ -98,6 +98,7 @@ a {
     .card img {
       height: 150px;
       min-width: 100%;
+      object-fit: cover;
       background-color: rgba(255, 255, 255, .1);
     }
     .descripcionCard {
