--- a/css/general.css
+++ b/css/general.css
@@ -82,7 +82,7 @@ a {
   justify-content: space-between;
   width: 300px;
   height: 400px;
-  background-color: rgb(13, 71, 161);
+  background-color: #0277bd;
   /*border: 1px dashed darkorange;*/
   font-size: 1rem;
 } 
