--- a/css/general.css
+++ b/css/general.css
@@ -83,7 +83,7 @@ a {
   width: 300px;
   height: 400px;
   background-color: rgba(2, 119, 189, .4);
-  
+  box-shadow: 0 0 2px 2px rgba(2, 119, 189, .8);
   /*border: 1px dashed darkorange;*/
   font-size: 1rem;
 } 
