--- a/css/general.css
+++ b/css/general.css
@@ -75,7 +75,6 @@ a {
 }
 
 /*        Card        *//* Prototipo de tarjeta */
-/*.sombra {box-shadow: 0px 0px 5px 2px rgba(1, 87, 155, .8);}*/
 .card {
   display: flex;
   flex-flow: column;
@@ -83,7 +82,7 @@ a {
   width: 300px;
   height: 400px;
   background-color: rgba(2, 119, 189, .4);
-  box-shadow: 0 0 2px 2px rgba(2, 119, 189, .8);
+  /*box-shadow: 0 0 2px 2px rgba(2, 119, 189, .8);*/
   /*border: 1px dashed darkorange;*/
   font-size: 1rem;
 } 
