--- a/css/apuntesdaw.css
+++ b/css/apuntesdaw.css
@@ -63,7 +63,7 @@ section {
 }
 
 aside {
-  width: 25%;
+  min-width: 25%;
   background-color: rgba(52, 152, 219, .2);
   border: 2px dashed darkorange;
 }
