--- a/css/apuntesdaw.css
+++ b/css/apuntesdaw.css
@@ -202,7 +202,8 @@ img {
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
-  width: 70%;
+  gap: .5rem;
+  width: 80%;
   margin: 0 auto;
 }
 /*****************************************/
