--- a/css/apuntesdaw.css
+++ b/css/apuntesdaw.css
@@ -61,7 +61,7 @@ section {
   width: 100%;
   margin: 2rem auto;
 }
-
+/* >>>>>>>>>>>>>>>>>> <<<<<<<<<<<<<<<<<<< */
 aside {
   min-width: 25%;
   border: 2px dashed darkorange;
