--- a/css/apuntesdaw.css
+++ b/css/apuntesdaw.css
@@ -64,6 +64,7 @@ section {
 /* >>>>>>>>>>>>>>>>>> <<<<<<<<<<<<<<<<<<< */
 aside {
   min-width: 25%;
+  height: max-content;
   border: 2px dashed darkorange;
 }
 
