--- a/css/apuntesdaw.css
+++ b/css/apuntesdaw.css
@@ -60,6 +60,7 @@ section {
   flex-flow: column nowrap;
   width: 100%;
   margin: 2rem auto;
+  border: 1px dashed darkmagenta;
 }
 /* >>>>>>>>>>>>>>>>>> <<<<<<<<<<<<<<<<<<< */
 aside {
