--- a/css/apuntesdaw.css
+++ b/css/apuntesdaw.css
@@ -90,7 +90,7 @@ aside {
     padding: 0;
     width: 100%;
     position: absolute;
-    left: 2rem;
+    left: 20%;
     top: 100%;
     opacity: 0;
     display: none;
