--- a/css/apuntesdaw.css
+++ b/css/apuntesdaw.css
@@ -63,7 +63,7 @@ section {
 }
 /* >>>>>>>>>>>>>>>>>> <<<<<<<<<<<<<<<<<<< */
 aside {
-  min-width: 20%;
+  min-width: 150px;
   height: max-content;
   border: 2px dashed darkorange;
 }
@@ -90,7 +90,7 @@ aside {
     padding: 0;
     width: 100%;
     position: absolute;
-    left: 20%;
+    left: 150px;
     top: 100%;
     opacity: 0.5;
     display: none;
