--- a/css/apuntesdaw.css
+++ b/css/apuntesdaw.css
@@ -61,43 +61,6 @@ section {
   width: 100%;
   margin: 0 auto;
 }
-/* >>>>>>>>>>>>>>>>>> <<<<<<<<<<<<<<<<<<< */
-aside {
-  min-width: 20%;
-  height: max-content;
-  border: 2px dashed darkorange;
-}
-  .menuAside {
-    display: flex;
-    flex-direction: column;
-    gap: .5rem;
-    list-style: none;
-  }
-    .menuAside li {
-      padding: .5rem 1rem;
-      background-color: #212121;
-    }
-  .desplegableLi {
-    position: relative;
-  }
-    .desplegableLi:hover .desplegable {
-      display: block;
-      opacity: 1;
-    }
-  .desplegable {
-    background-color: slateblue;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    position: absolute;
-    left: 0;
-    top: 100%;
-    opacity: 0.5;
-    display: none;
-  }
-  .desplegable li {
-    list-style: none;
-  }
 
 article { 
   width: 100%;
@@ -231,7 +194,7 @@ img {
 /*****************************************/
 .contenedor { /* Contenedor todo menos header */
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: column nowrap;
   justify-content: center;
   gap: .5rem;
   width: 80%;
